Bug 633820 - nsCrashOnException.cpp compilation fails to compile on mingw r=ehsan a=benjamin