xpcom/base/nsCrashOnException.h
@@ -39,10 +39,6 @@
 #ifndef nsCrashOnException_h
 #define nsCrashOnException_h
 
-#ifndef _MSC_VER
-#error This file only makes sense on Windows with Visual C++.
-#endif
-
 #include <nscore.h>
 #include <windows.h>
 
